# docs

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  SECURITY.md  UPGRADE.md  compose-e2e.yml  compose.production.yaml  compose.yaml  compose.yml  docker-compose.yml  docs-0.0.1.tgz  docs-0.0.2.tgz  docs-2.0.1-beta.1.tgz  docs-2.0.1-beta.2.tgz  docs-2.0.1-beta.3.tgz  docs-2.0.1-beta.4.tgz  docs-2.0.1-beta.5.tgz  docs-2.0.1-beta.6.tgz  docs-2.0.1-beta.7.tgz  docs-2.0.1-beta.8.tgz  docs-2.0.1-test.202501271123.tgz  docs-2.0.1-test.202501271238.tgz  docs-2.0.1-test.202501271307.tgz  docs-2.1.0-beta-1.tgz  docs-2.1.0.tgz  docs-2.2.0-beta-1.tgz  docs-2.2.0-beta.1.tgz  docs-2.2.0-beta.2.tgz  docs-2.2.0.tgz  docs-2.3.0.tgz  docs-2.4.0.tgz  docs-2.5.0.tgz  docs-2.6.0.tgz  docs-2.7.0.tgz  (+16 more)
src/backend/: pyproject.toml
src/backend/core/: admin.py  cache.py  choices.py  enums.py  factories.py  malware_detection.py  middleware.py  models.py  urls.py  utils.py
src/backend/core/api/: __init__.py  filters.py  permissions.py  serializers.py  utils.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py  decorators.py  middleware.py
src/backend/core/management/commands/: update_files_content_type_metadata.py
src/backend/core/migrations/: 0001_initial.py  0002_create_pg_trgm_extension.py  0003_document_link_reach_document_link_role_and_more.py  0004_migrate_is_public_to_link_reach.py  0005_remove_document_is_public_alter_document_link_reach_and_more.py  0006_add_user_full_name_and_short_name.py  0007_fix_users_duplicate.py  0008_alter_document_link_reach.py  0009_add_document_favorite.py  0010_add_field_creator_to_document.py  0011_populate_creator_field_and_make_it_required.py  0012_make_document_creator_and_invitation_issuer_optional.py  0013_activate_fuzzystrmatch_extension.py  0013_alter_user_options.py  0014_add_tree_structure_to_documents.py  0015_set_path_on_existing_documents.py  0016_add_document_excerpt.py  0017_add_fields_for_soft_delete.py  0018_update_blank_title.py  0019_alter_user_language_default_to_null.py  0020_remove_document_is_public_and_more.py  0020_remove_is_public_add_field_attachments_and_duplicated_from.py  0021_activate_unaccent_extension.py  0021_remove_document_is_public_and_more.py  0022_alter_user_language_documentaskforaccess.py  0022_remove_document_is_public_and_more.py  0023_remove_document_is_public_and_more.py  0024_add_is_masked_field_to_link_trace.py
src/backend/core/services/: ai_services.py  collaboration_services.py  config_services.py  converter_services.py
src/backend/core/tasks/: mail.py
src/backend/core/tests/: conftest.py  test_api_config.py  test_api_footer.py  test_api_users.py  test_api_utils_ai_document_rate_throttles.py  test_api_utils_ai_user_rate_throttles.py  test_api_utils_filter_root_paths.py  test_api_utils_nest_tree.py  test_malware_detection.py  test_models_document_accesses.py  test_models_documents.py  test_models_templates.py  test_services_ai_services.py  test_services_collaboration_services.py  test_services_converter_services.py  test_settings.py  test_user_token_api.py  test_utils.py  test_utils_base64_yjs_to_text.py  test_utils_filter_descendants.py
src/backend/core/tests/authentication/: test_backends.py  test_decorators.py  test_middleware.py
src/backend/core/tests/commands/: test_update_files_content_type_metadata.py
src/backend/core/tests/documents/: test_api_document_accesses.py  test_api_document_accesses_create.py  test_api_document_invitations.py  test_api_document_versions.py  test_api_documents_ai_proxy.py  test_api_documents_ai_transform.py  test_api_documents_ai_translate.py  test_api_documents_ask_for_access.py  test_api_documents_attachment_upload.py  test_api_documents_can_edit.py  test_api_documents_children_create.py  test_api_documents_children_list.py  test_api_documents_collaboration_auth.py  test_api_documents_cors_proxy.py  test_api_documents_create.py  test_api_documents_create_for_owner.py  test_api_documents_delete.py  test_api_documents_descendants.py  test_api_documents_descendants_filters.py  test_api_documents_duplicate.py  test_api_documents_favorite.py  test_api_documents_favorite_list.py  test_api_documents_list.py  test_api_documents_list_filters.py  test_api_documents_mask.py  test_api_documents_media_auth.py  test_api_documents_media_check.py  test_api_documents_move.py  test_api_documents_restore.py  test_api_documents_retrieve.py  test_api_documents_trashbin.py  test_api_documents_tree.py  test_api_documents_update.py  test_api_documents_update_extract_attachments.py
src/backend/core/tests/migrations/: test_0018_update_blank_title.py  test_migrations_0018_update_blank_title.py  test_migrations_0020_remove_is_public_add_field_attachments_and_duplicated_from.py
src/backend/core/tests/swagger/: test_openapi_schema.py
src/backend/core/tests/templates/: test_api_template_accesses.py  test_api_template_accesses_create.py  test_api_templates_list.py
src/backend/core/user_token/: serializers.py  viewsets.py
src/backend/demo/: defaults.py
src/backend/demo/data/template/: code.txt
src/backend/demo/management/commands/: create_demo.py
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/impress/: __init__.py  celery_app.py  settings.py  urls.py
src/backend/impress/configuration/theme/: default.json
src/backend/locale/br_FR/LC_MESSAGES/: django.po
src/mcp_server/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
src/mcp_server/docs_mcp_server/: __init__.py  constants.py  mcp_server.py  settings.py  utils.py
src/mcp_server/docs_mcp_server/auth/: __init__.py  forwarder.py  token.py
(+561 files in other folders)
